--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vitepress dev src",
+    "build": "vitepress build src",
+    "preview": "vitepress preview src"
   },
   "engines": {
     "node": "22.x"
   },
   "devDependencies": {
-    "vuepress": "1.9.7"
+    "vitepress": "^1.6.4",
+    "vue": "^3.5.27"
   }
 }
