--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-pids
-logs
 node_modules
-npm-debug.log
-coverage/
-run
+src/.vitepress/cache
 dist
+package-lock.json
 .DS_Store
-.nyc_output
-.basement
-config.local.js
-basement_dist
-.vercel
